# ModernCmakeStarter

./: .clang-format  .clang-tidy  .cmake-format  .cmakefiles.txt  .envrc  .gitignore  CMakeDefaultPresets.json  CMakeLists.txt  CMakePresets.json  GNUmakefile  README.md  gcovr.cfg  requirements.txt
.github/workflows/: standalone.yml  style.yml
all/: CMakeLists.txt  CMakePresets.json
cmake/: CPM.cmake  options.cmake  tools.cmake
documentation/: CMakeLists.txt
include/greeter/: greeter.h
source/: greeter.cpp
standalone/: CMakeLists.txt  CMakePresets.json
standalone/source/: main.cpp
test/: CMakeLists.txt  CMakePresets.json
test/source/: greeter.cpp  main.cpp
